2005-09-13  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/automake.texi (limitations on file names): New section.
	* lib/install-sh: Rewrite to support '*' in file names.
	Also, tune so that we don't invoke so many commands in the usual case.
	* tests/instspc.test: The "*" test is now fixed.

2005-09-13  Stepan Kasal  <kasal@ucw.cz>

	* automake.in (Languages) <cppasm>: Fix typo in the comment.

2005-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/ltlib.am (uninstall-%DIR%LTLIBRARIES): Do not put
	shell in verbose mode.

2005-08-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (variable_value): Do not read the TRUE
	value of a conditionally defined variable.
	Report from Juergen Leising.

	* automake.in (lang_yacc_target_hook): Use AM_MAKEFLAGS in recursive
	$(MAKE) invocations.
	* lib/am/texibuild.am (?GENERIC_INFO?%SOURCE_SUFFIX%%DEST_SUFFIX%):
	Likewise.
	* lib/am/texi-vers.am (%STAMPVTI%): Likewise.
	* lib/am/remake-hdr.am (%CONFIG_H%): Likewise.
	* Makefile.am (maintainer-check): Check for this.
	Report from Stepan Kasal.

	* m4/mkdirp.m4: Update misleading comment about `mkdir -p .'.
	Prompted by Stepan Kasal.

2005-08-07  Stepan Kasal  <kasal@ucw.cz>

	* lib/am/texinfos.am (uninstall-info-am): Call install-info only if
	the $(infodir) exists.

2005-07-31  Stepan Kasal  <kasal@ucw.cz>

	* tests/library3.test: Fix a typo which made the test fail.

2005-07-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Linking, Program and Library Variables):
	Suggest reserving -l for third-party libraries.

	* lib/Automake/Variable.pm (require_variables): Mention aclocal's
	search path when suggesting to add a macro in configure.ac.
	People are confused when Automake suggests adding a macro (such as
	AC_PROG_LIBTOOL) that is already in configure.ac.
	* automake.in (require_file_internal): Suggest `automake --add-missing'
	for missing files that can be installed.
	* tests/library3.test: Adjust.
