@@ -1,4 +1,4 @@
-@set UPDATED 27 July 2005
-@set UPDATED-MONTH July 2005
+@set UPDATED 30 September 2005
+@set UPDATED-MONTH September 2005
 @set EDITION 1.9a
 @set VERSION 1.9a
