@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002, 2004  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2004, 2005  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -108,11 +108,21 @@ main (int argc, char *argv[])
 EOF
 cp source.c source2.c
 
+rm install-sh
+
 libtoolize
 $ACLOCAL
 $AUTOCONF
-$AUTOMAKE -a
+$AUTOMAKE -a --copy
 ./configure --prefix `pwd`/inst --program-prefix=p
+
+# Remove the 'x' bits just for fun.  (Peter O'Gorman said: "If an
+# upstream source tarball does not use the autotools, it is sometimes
+# easier to build if it is modified to use them. Then a patch is
+# generated, and applied to the unpacked clean sources during the
+# build. patch(1) knows nothing about permissions, so executable bits
+# etc can disappear.")
+chmod -x install-sh
 
 $MAKE
 $MAKE test-install-data
