@@ -1,3 +1,13 @@
+2005-10-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/nobase.test: Exercise previous patch.
+
+2005-10-03  Peter O'Gorman  <peter@pogma.com>  (tiny change)
+
+	* lib/am/distdir.am: Remove $(SHELL) when calling install_sh
+	* m4/strip.m4: Ditto.
+	* m4/install-sh.m4: Add $(SHELL) to the definition of install_sh
+
 2005-09-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* doc/automake.texi (limitations on file names): New section.
